--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Maria Luisa RODRIGUEZ</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/MLPEKPAR" target="_blank"
+            >Maria Luisa RODRIGUEZ</a
+          >
+          and is
+          <a href="https://github.com/MLPEKPAR/W5HW" target="_blank">
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
