--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://app.netlify.com/sites/remarkable-cocada-feb429/configuration/general"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
